// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageList matches snapshot 1`] = `
<span
  onKeyDown={[Function]}
  role="button"
  tabIndex="0"
  type="span"
>
  text
</span>
`;

exports[`LanguageList matches snapshot when type is "div" 1`] = `
<div
  onKeyDown={[Function]}
  role="button"
  tabIndex="0"
  type="div"
>
  text
</div>
`;
